--- a/src/backend/api/api.csproj
+++ b/src/backend/api/api.csproj
@@ -12,5 +12,9 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.18" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Routes\" />
+  </ItemGroup>
 
 </Project>
