--- a/src/backend/api/api.csproj
+++ b/src/backend/api/api.csproj
@@ -14,6 +14,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Routes\" />
+    <Folder Include="Utils\Converter\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Utils\Converter\" />
+  </ItemGroup>
 </Project>
