--- a/src/backend/api/api.csproj
+++ b/src/backend/api/api.csproj
@@ -12,16 +12,25 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.18" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Routes\" />
     <Folder Include="Utils\Converter\" />
     <Folder Include="Files\" />
+    <Folder Include="Data\" />
   </ItemGroup>
 
   <ItemGroup>
     <None Remove="Utils\Converter\" />
     <None Remove="Files\" />
     <None Remove="Repositories\" />
+    <None Remove="Data\" />
   </ItemGroup>
 </Project>
