--- a/src/backend/api/api.csproj
+++ b/src/backend/api/api.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.18" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.0">
@@ -35,9 +36,7 @@
     <Folder Include="Models\" />
     <Folder Include="Utils\Algorithm\" />
     <Folder Include="Utils\Converter\" />
-    <Folder Include="Utils\Helper\" />
-    <Folder Include="Files\" />
-    <Folder Include="Data\" />
+    <Folder Include="Database\Data\" />
     <Folder Include="Interfaces\" />
     <Folder Include="Repositories\" />
   </ItemGroup>
