--- a/src/backend/api/api.csproj
+++ b/src/backend/api/api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -33,7 +33,6 @@
   <ItemGroup>
     <Folder Include="Routes\" />
     <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
     <Folder Include="Utils\Algorithm\" />
     <Folder Include="Utils\Converter\" />
     <Folder Include="Database\Data\" />
